main-page: added gallery

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bo-Box | Главная</title>
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -91,6 +92,7 @@
 						</label>
 					</div>
 					<div class="header-nav-list-ul-outter">
+						<div class="header-nav-list-ul-outter__shadow"></div>
 						<div class="header-nav-list-item-ul">
 							<div class="header-nav-list-item-ul-side">
 								<div class="header-nav-list-item-ul-side-head">Типы диванов</div>
@@ -269,13 +271,49 @@
 					</div>
 				</div>
 			</div>
-		</header>	
+		</header>
+		<div class="main">
+			<div class="container">
+				<div class="slider-wrapper">
+					<div class="first-slider">
+						<div class="first-slider-item">
+							<img src="img/slider-item.png">
+						</div>
+						<div class="first-slider-item">
+							<img src="img/slider-item.png">
+						</div>
+						<div class="first-slider-item">
+							<img src="img/item-2.png">
+						</div>
+						<div class="first-slider-item">
+							<img src="img/slider-item.png">
+						</div>
+						<div class="first-slider-item">
+							<img src="img/slider-item.png">
+						</div>
+					</div>
+					<div class="first-slider__arrow-prev">
+						<svg width="24" height="132" viewBox="0 0 24 132" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M21.0751 0.680862C21.2514 0.157457 21.8186 -0.123963 22.342 0.0522916C22.8654 0.228547 23.1468 0.795733 22.9705 1.31914L21.0751 0.680862ZM23.9421 130.665C24.1273 131.185 23.8557 131.757 23.3354 131.942C22.8151 132.127 22.2432 131.856 22.0579 131.335L23.9421 130.665ZM22.9705 1.31914L3.15844 60.153L1.26302 59.5147L21.0751 0.680862L22.9705 1.31914ZM3.2655 72.5893L23.9421 130.665L22.0579 131.335L1.38136 73.2602L3.2655 72.5893ZM3.15844 60.153C1.79796 64.1931 1.83567 68.5733 3.2655 72.5893L1.38136 73.2602C-0.198988 68.8214 -0.240667 63.9801 1.26302 59.5147L3.15844 60.153Z" fill="black"/>
+						</svg>
+					</div>
+					<div class="first-slider__arrow-next">
+						<svg width="24" height="132" viewBox="0 0 24 132" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M1.02945 1.31914L20.8416 60.153L22.737 59.5147L2.92487 0.680862L1.02945 1.31914ZM20.7345 72.5893L0.0579267 130.665L1.94207 131.335L22.6186 73.2602L20.7345 72.5893ZM20.8416 60.153C22.202 64.1931 22.1643 68.5733 20.7345 72.5893L22.6186 73.2602C24.199 68.8214 24.2407 63.9801 22.737 59.5147L20.8416 60.153Z" fill="black"/>
+						</svg>
+					</div>
+				</div>
+				<!-- /.slider-wrapper -->
+			</div>
+		</div>
+		<!-- /.main -->
 	</div>
 
 
 
 
 	<script src="js/libs.min.js"></script>
+	<script src="js/slick.min.js"></script>
 	<script src="js/myscripts.js"></script>
 </body>
 </html>
