--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bo-Box | Главная</title>
 	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/jquery-ui.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -1069,6 +1070,7 @@
 
 	<script src="js/libs.min.js"></script>
 	<script src="js/slick.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
 	<script src="js/myscripts.js"></script>
 </body>
 </html>
