--- a/app/catalog.html
+++ b/app/catalog.html
@@ -1125,7 +1125,7 @@
 						<div class="footer-top-item">
 							<div class="footer-top-item__head">Мы в социальных сетях</div>
 							<div class="footer-top-item-list">
-								<div class="footer-top-item-list__item">
+								<div class="footer-top-item-list__item footer-top-item-list__item_mb">
 									<a href="#">
 										<svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
 											<path fill-rule="evenodd" clip-rule="evenodd" d="M21 42C32.598 42 42 32.598 42 21C42 9.40202 32.598 0 21 0C9.40202 0 0 9.40202 0 21C0 32.598 9.40202 42 21 42Z" fill="#55ACEE"/>
@@ -1159,7 +1159,20 @@
 										</svg>
 									</a>
 								</div>
-								<div class="footer-top-item-list__item"><a href="mailto:info@bobox.ru">info@bobox.ru</a></div>
+								<div class="footer-top-item-list__item">
+									<a href="#">
+										<svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<path d="M21 42C32.598 42 42 32.598 42 21C42 9.40202 32.598 0 21 0C9.40202 0 0 9.40202 0 21C0 32.598 9.40202 42 21 42Z" fill="#CB2027"/>
+											<path d="M22.695 28.1209C21.1074 27.9982 20.4403 27.2109 19.1953 26.4551C18.511 30.0454 17.6747 33.4872 15.1976 35.2852C14.4321 29.8587 16.3199 25.7828 17.1966 21.4565C15.7023 18.9409 17.3763 13.8775 20.5283 15.1252C24.4077 16.6592 17.1697 24.4789 22.0287 25.4556C27.1014 26.4753 29.1723 16.6536 26.0263 13.459C21.481 8.84667 12.7959 13.3542 13.8639 19.9569C14.124 21.571 15.7921 22.061 14.5302 24.2884C11.6212 23.6441 10.7534 21.3498 10.865 18.291C11.045 13.2842 15.3639 9.77841 19.6958 9.29326C25.1743 8.68009 30.3163 11.305 31.0261 16.4582C31.8246 22.2744 28.5528 28.5731 22.695 28.1209Z" fill="#F1F2F2"/>
+										</svg>
+									</a>
+									<a href="#">
+										<svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<circle cx="21" cy="21" r="21" fill="#4DBC15"/>
+											<path d="M24.9622 33H33.3498V18.7994L16.5606 13.9858V8H11V33H19.3876V25.1289H24.9622V33Z" fill="white"/>
+										</svg>
+									</a>
+								</div>
 							</div>
 						</div>
 						<div class="footer-top-item">
@@ -1183,6 +1196,7 @@
 									</svg>
 									10:00 - 19:00
 								</div>
+								<div class="footer-top-item-list__item"><a href="mailto:info@bobox.ru">info@bobox.ru</a></div>
 							</div>
 						</div>
 					</div>
@@ -1208,6 +1222,7 @@
 	<script src="js/libs.min.js"></script>
 	<script src="js/jquery-ui.min.js"></script>
 	<script src="js/slick.min.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/myscripts.js"></script>
 </body>
 </html>
