--- a/app/where-buy.html
+++ b/app/where-buy.html
@@ -289,6 +289,142 @@
 			</div>
 			<div class="conatiner">
 				<div class="block">
+					<div class="where-buy-big active">
+						<div class="where-buy-big-img">
+							<div class="where-buy-big-img__item active">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+						</div>
+						<div class="where-buy-big-info">
+							<div class="where-buy-big-info__head">Салон “Bo-Box”</div>
+							<div class="where-buy-big-info__item">
+								МЦ “Мебельный”
+							</div>
+							<div class="where-buy-big-info__item">
+								г. Санкт-Петербург ул. 8 марта д. 3 к. 3
+							</div>
+							<div class="where-buy-big-info__item"><a href="tel:8 (800) 987-65-43">8 (800) 987-65-43</a></div>
+							<div class="where-buy-big-info__item">10:00 - 19:00</div>
+							<div class="where-buy-big-info__item">Вход находится за эскалатором на втором этаже</div>
+							<div class="where-buy-big-info-gallery">
+								<div class="where-buy-big-info-gallery__item active"><img src="img/where-buy-img-mini-1.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-2.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-3.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-4.png"></div>
+							</div>
+						</div>
+					</div>
+					<div class="where-buy-big">
+						<div class="where-buy-big-img">
+							<div class="where-buy-big-img__item active">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+						</div>
+						<div class="where-buy-big-info">
+							<div class="where-buy-big-info__head">Салон “Bo-Box”</div>
+							<div class="where-buy-big-info__item">
+								МЦ “Мебельный”
+							</div>
+							<div class="where-buy-big-info__item">
+								г. Санкт-Петербург ул. 8 марта д. 3 к. 3
+							</div>
+							<div class="where-buy-big-info__item"><a href="tel:8 (800) 987-65-43">8 (800) 987-65-43</a></div>
+							<div class="where-buy-big-info__item">10:00 - 19:00</div>
+							<div class="where-buy-big-info__item">Вход находится за эскалатором на втором этаже</div>
+							<div class="where-buy-big-info-gallery">
+								<div class="where-buy-big-info-gallery__item active"><img src="img/where-buy-img-mini-1.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-2.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-3.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-4.png"></div>
+							</div>
+						</div>
+					</div>
+					<div class="where-buy-big">
+						<div class="where-buy-big-img">
+							<div class="where-buy-big-img__item active">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+						</div>
+						<div class="where-buy-big-info">
+							<div class="where-buy-big-info__head">Салон “Bo-Box”</div>
+							<div class="where-buy-big-info__item">
+								МЦ “Мебельный”
+							</div>
+							<div class="where-buy-big-info__item">
+								г. Санкт-Петербург ул. 8 марта д. 3 к. 3
+							</div>
+							<div class="where-buy-big-info__item"><a href="tel:8 (800) 987-65-43">8 (800) 987-65-43</a></div>
+							<div class="where-buy-big-info__item">10:00 - 19:00</div>
+							<div class="where-buy-big-info__item">Вход находится за эскалатором на втором этаже</div>
+							<div class="where-buy-big-info-gallery">
+								<div class="where-buy-big-info-gallery__item active"><img src="img/where-buy-img-mini-1.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-2.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-3.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-4.png"></div>
+							</div>
+						</div>
+					</div>
+					<div class="where-buy-big">
+						<div class="where-buy-big-img">
+							<div class="where-buy-big-img__item active">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+							<div class="where-buy-big-img__item">
+								<img src="img/where-buy-big-1.png">
+							</div>
+						</div>
+						<div class="where-buy-big-info">
+							<div class="where-buy-big-info__head">Салон “Bo-Box”</div>
+							<div class="where-buy-big-info__item">
+								МЦ “Мебельный”
+							</div>
+							<div class="where-buy-big-info__item">
+								г. Санкт-Петербург ул. 8 марта д. 3 к. 3
+							</div>
+							<div class="where-buy-big-info__item"><a href="tel:8 (800) 987-65-43">8 (800) 987-65-43</a></div>
+							<div class="where-buy-big-info__item">10:00 - 19:00</div>
+							<div class="where-buy-big-info__item">Вход находится за эскалатором на втором этаже</div>
+							<div class="where-buy-big-info-gallery">
+								<div class="where-buy-big-info-gallery__item active"><img src="img/where-buy-img-mini-1.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-2.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-3.png"></div>
+								<div class="where-buy-big-info-gallery__item"><img src="img/where-buy-img-mini-4.png"></div>
+							</div>
+						</div>
+					</div>
 					<div class="where-buy-big">
 						<div class="where-buy-big-img">
 							<div class="where-buy-big-img__item active">
@@ -581,68 +717,42 @@
 			    }
 			});
 			myMap.controls.add(geolocationControl);
-			// var placemarks = [
-			// 	new ymaps.Placemark([59.936510, 30.244204], {}, {
-			// 	    iconLayout: 'default#image',
-			// 	    iconImageHref: 'img/geotag.png',
-			// 	    iconImageSize: [30, 42],
-			// 	    iconImageOffset: [-3, -42]
-			// 	}),
-			// 	new ymaps.Placemark([59.957883, 30.325774], {}, {
-			// 	    iconLayout: 'default#image',
-			// 	    iconImageHref: 'img/geotag.png',
-			// 	    iconImageSize: [30, 42],
-			// 	    iconImageOffset: [-3, -42]
-			// 	}),
-			// 	new ymaps.Placemark([59.952769, 30.451769], {}, {
-			// 	    iconLayout: 'default#image',
-			// 	    iconImageHref: 'img/geotag.png',
-			// 	    iconImageSize: [30, 42],
-			// 	    iconImageOffset: [-3, -42]
-			// 	}),
-			// 	new ymaps.Placemark([59.928286, 30.408314], {}, {
-			// 	    iconLayout: 'default#image',
-			// 	    iconImageHref: 'img/geotag.png',
-			// 	    iconImageSize: [30, 42],
-			// 	    iconImageOffset: [-3, -42]
-			// 	}),
-			// 	new ymaps.Placemark([59.919877, 30.285232], {}, {
-			// 	    iconLayout: 'default#image',
-			// 	    iconImageHref: 'img/geotag.png',
-			// 	    iconImageSize: [30, 42],
-			// 	    iconImageOffset: [-3, -42]
-			// 	})
-			// ];
 			var myPlacemark = new ymaps.Placemark([59.936510, 30.244204], {}, {
+				id: 'geo-1',
 			    iconLayout: 'default#image',
 			    iconImageHref: 'img/geotag.png',
 			    iconImageSize: [30, 42],
 			    iconImageOffset: [-3, -42]
 			});
 			var myPlacemark2 = new ymaps.Placemark([59.957883, 30.325774], {}, {
+				id: 'geo-2',
 			    iconLayout: 'default#image',
 			    iconImageHref: 'img/geotag.png',
 			    iconImageSize: [30, 42],
 			    iconImageOffset: [-3, -42]
 			});
 			var myPlacemark3 = new ymaps.Placemark([59.952769, 30.451769], {}, {
+				id: 'geo-3',
 			    iconLayout: 'default#image',
 			    iconImageHref: 'img/geotag.png',
 			    iconImageSize: [30, 42],
 			    iconImageOffset: [-3, -42]
 			});
 			var myPlacemark4 = new ymaps.Placemark([59.928286, 30.408314], {}, {
+				id: 'geo-4',
 			    iconLayout: 'default#image',
 			    iconImageHref: 'img/geotag.png',
 			    iconImageSize: [30, 42],
 			    iconImageOffset: [-3, -42]
 			});
 			var myPlacemark5 = new ymaps.Placemark([59.919877, 30.285232], {}, {
+				id: 'geo-5',
 			    iconLayout: 'default#image',
 			    iconImageHref: 'img/geotag-active.png',
 			    iconImageSize: [30, 42],
 			    iconImageOffset: [-3, -42]
 			});
+			var placemarks = [myPlacemark,myPlacemark2,myPlacemark3,myPlacemark4,myPlacemark5];
 			myMap.geoObjects.add(myPlacemark);
 			myMap.geoObjects.add(myPlacemark2);
 			myMap.geoObjects.add(myPlacemark3);
@@ -650,10 +760,25 @@
 			myMap.geoObjects.add(myPlacemark5);
 			// myMap.geoObjects.add(placemarks);
 			myMap.geoObjects.events.add('click', function(e) {
-				myMap.geoObjects;
+				placemarks.map(function(item){
+					item.options.set('iconImageHref', 'img/geotag.png')
+				});
 			    e.get('target').options.set('iconImageHref', 'img/geotag-active.png');
+
+			    let a = e.get('target').options.get('id');
+			    let b = a.split('-');
+			    // $('.where-buy-big').attr('id', a);
+
+			    console.log(b[1]);
+			    getId(b[1]);
 			})
 	    }
+
+	    function getId(a) {
+	    	$('.where-buy-big').siblings().removeClass('active').eq(a-1).addClass('active');
+	    }
+
+
 	</script>
 	<script src="js/myscripts.js"></script>
 </body>
