remarks was added

--- a/app/designers.html
+++ b/app/designers.html
@@ -187,7 +187,7 @@
 								</div>
 								<a href="principels.html" class="header-wrapper-item-list-item header-wrapper-item-list-item_red-hover">Доставка и оплата</a>
 								<div class="header-wrapper-item-list-item">									
-									<a href="catalog.html" class="header-wrapper-item-list-item">Интересное</a>
+									<a href="#" class="header-wrapper-item-list-item">Интересное</a>
 									<div class="header-wrapper-item-list-item-inner-ul">
 										<a href="fabrics.html" class="header-wrapper-item-list-item-inner-ul-item">Обивки</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">PDF-каталоги</a>
@@ -1005,9 +1005,7 @@
 						<div class="card-main-block-description-row">
 							<div class="card-main-block-description-row-btn-wrapper">
 								<a href="#" class="card-main-block-description-row-btn-wrapper-like">
-									<svg width="29" height="27" viewBox="0 0 29 27" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M14.1957 26.1851L14.3623 26.3363L14.5301 26.1866L24.0585 17.6862L24.06 17.6849C25.9734 15.9507 27.2885 13.7587 27.8581 11.3445C28.2483 9.69312 28.129 8.66085 28.0921 8.42389C27.6872 4.00593 24.5456 0.750517 20.5671 0.750517C18.0618 0.750517 15.7605 2.02951 14.3725 4.10007C13.0047 2.00707 10.7912 0.75 8.32121 0.75C4.34324 0.75 1.20119 4.00526 0.796668 8.4231C0.759091 8.66134 0.640212 9.69358 1.03013 11.3445C1.59974 13.7582 2.91489 15.9507 4.82829 17.6844L14.1957 26.1851ZM26.3647 10.9927L26.3647 10.9928C25.8681 13.0982 24.7165 15.0196 23.0331 16.5447C23.0329 16.5449 23.0326 16.5452 23.0324 16.5454L14.3714 24.2726L5.85917 16.5476L5.85902 16.5475C4.17211 15.0191 3.02072 13.0979 2.52357 10.9922L2.52356 10.9922C2.34472 10.2351 2.29291 9.64646 2.28516 9.25023C2.27841 8.90466 2.30463 8.70846 2.31217 8.65537L2.31243 8.6554L2.32018 8.60318L2.32126 8.5959L2.32191 8.58856C2.64934 4.90177 5.19494 2.28423 8.32121 2.28423C10.6351 2.28423 12.6836 3.70444 13.6607 6.01754C13.6608 6.01758 13.6608 6.01761 13.6608 6.01765L14.137 7.14641L14.3673 7.69237L14.5977 7.14641L15.0739 6.01761C15.0739 6.01758 15.0739 6.01756 15.0739 6.01754C16.033 3.74603 18.1912 2.28475 20.5676 2.28475C23.6923 2.28475 26.2394 4.90116 26.5736 8.63836L26.5735 8.63837L26.5745 8.64709L26.5747 8.64818C26.5774 8.66496 26.6104 8.86994 26.603 9.25021C26.5954 9.64687 26.5435 10.2356 26.3647 10.9927Z" fill="#D71921" stroke="#D71921" stroke-width="0.5"></path>
-									</svg>
+									<img src="img/icons/heart-red.svg">
 								</a>
 								<a href="#" class="card-main-block-description-row-btn-wrapper-buy">
 									КУПИТЬ
