--- a/app/card.html
+++ b/app/card.html
@@ -178,7 +178,7 @@
 								<div class="header-wrapper-item-list-item">									
 									<a href="about.html" class="header-wrapper-item-list-item">О компании</a>
 									<div class="header-wrapper-item-list-item-inner-ul">
-										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">История</a>
+										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">История</a>
 										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">Принципы</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Новости</a>
 										<a href="contacts.html" class="header-wrapper-item-list-item-inner-ul-item">Контакты</a>
@@ -193,7 +193,7 @@
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">PDF-каталоги</a>
 										<a href="mechanics.html" class="header-wrapper-item-list-item-inner-ul-item">Механизмы</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Справочники терминов</a>
-										<a href="news-item.html" class="header-wrapper-item-list-item-inner-ul-item">Статьи</a>
+										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Статьи</a>
 										<a href="designers.html" class="header-wrapper-item-list-item-inner-ul-item">Дизайнеры рекомендует</a>
 									</div>
 								</div>
@@ -650,7 +650,7 @@
 								<div class="card-main-block-description-row-wrapper">
 									<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Материал:</div>
 									<div class="card-main-block-description-row-item card-main-block-description-row-item_left">
-										<div class="card-main-block-description-row-item-result" data-result-material><div class="material-item" data-material-number="1" data-cost="15000">Шинил</div></div>
+										<div class="card-main-block-description-row-item-result" data-result-material><div class="material-item" data-material-number="1" data-cost="15000">Soft Leather (кожа)</div></div>
 										<div class="card-main-block-description-row-item-tooltip">
 											?
 											<div class="card-main-block-description-row-item-tooltip__card">
@@ -665,7 +665,6 @@
 								<div class="card-main-block-description-row-item-ul-vert">
 									<div class="card-main-block-description-row-item-ul-vert__item"><div class="material-item" data-material-number="2" data-cost="11000">Sofa (замша)</div></div>
 									<div class="card-main-block-description-row-item-ul-vert__item"><div class="material-item" data-material-number="3" data-cost="12000">Ламбре (велюр)</div></div>
-									<div class="card-main-block-description-row-item-ul-vert__item"><div class="material-item" data-material-number="4" data-cost="17000">Soft Leather (кожа)</div></div>
 								</div>
 							</div>
 							<div class="card-main-block-description-row card-main-block-description-row_border-bottom card-main-block-description-row_center">
@@ -689,7 +688,7 @@
 								<div class="card-main-block-description-row-wrapper">
 									<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Доп. материал:</div>
 									<div class="card-main-block-description-row-item card-main-block-description-row-item_left">
-										<div class="card-main-block-description-row-item-result" data-result-material-dop><div class="material-item" data-material-number="1" data-cost="1500">Шинил</div></div>
+										<div class="card-main-block-description-row-item-result" data-result-material-dop><div class="material-item" data-material-number="1" data-cost="1500">Soft Leather (кожа)</div></div>
 										<div class="card-main-block-description-row-item-tooltip">
 											?
 											<div class="card-main-block-description-row-item-tooltip__card">
@@ -704,7 +703,6 @@
 								<div class="card-main-block-description-row-item-ul-vert">
 									<div class="card-main-block-description-row-item-ul-vert__item"><div class="material-item" data-material-number="2" data-cost="1100">Sofa (замша)</div></div>
 									<div class="card-main-block-description-row-item-ul-vert__item"><div class="material-item" data-material-number="3" data-cost="1200">Ламбре (велюр)</div></div>
-									<div class="card-main-block-description-row-item-ul-vert__item"><div class="material-item" data-material-number="4" data-cost="1700">Soft Leather (кожа)</div></div>
 								</div>
 							</div>
 							<div class="card-main-block-description-row card-main-block-description-row_border-bottom card-main-block-description-row_center">
