--- a/app/index.html
+++ b/app/index.html
@@ -178,7 +178,7 @@
 								<div class="header-wrapper-item-list-item">									
 									<a href="about.html" class="header-wrapper-item-list-item">О компании</a>
 									<div class="header-wrapper-item-list-item-inner-ul">
-										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">История</a>
+										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">История</a>
 										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">Принципы</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Новости</a>
 										<a href="contacts.html" class="header-wrapper-item-list-item-inner-ul-item">Контакты</a>
@@ -193,7 +193,7 @@
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">PDF-каталоги</a>
 										<a href="mechanics.html" class="header-wrapper-item-list-item-inner-ul-item">Механизмы</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Справочники терминов</a>
-										<a href="news-item.html" class="header-wrapper-item-list-item-inner-ul-item">Статьи</a>
+										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Статьи</a>
 										<a href="designers.html" class="header-wrapper-item-list-item-inner-ul-item">Дизайнеры рекомендует</a>
 									</div>
 								</div>
@@ -671,14 +671,14 @@
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Габариты:</div>
-											<div class="card-item-row-item__value">2000 x 920 x 860</div>
+											<div class="card-item-row-item__head">Габариты (см):</div>
+											<div class="card-item-row-item__value">200 x 92 x 86</div>
 										</div>
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Спальное место:</div>
-											<div class="card-item-row-item__value">2000 x 1200</div>
+											<div class="card-item-row-item__head">Спальное место (см):</div>
+											<div class="card-item-row-item__value">200 x 120</div>
 										</div>
 									</div>
 									<div class="card-item-row">
@@ -734,14 +734,14 @@
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Габариты:</div>
-											<div class="card-item-row-item__value">2000 x 920 x 860</div>
+											<div class="card-item-row-item__head">Габариты (см):</div>
+											<div class="card-item-row-item__value">200 x 92 x 86</div>
 										</div>
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Спальное место:</div>
-											<div class="card-item-row-item__value">2000 x 1200</div>
+											<div class="card-item-row-item__head">Спальное место (см):</div>
+											<div class="card-item-row-item__value">200 x 120</div>
 										</div>
 									</div>
 									<div class="card-item-row">
@@ -798,14 +798,14 @@
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Габариты:</div>
-											<div class="card-item-row-item__value">2000 x 920 x 860</div>
+											<div class="card-item-row-item__head">Габариты (см):</div>
+											<div class="card-item-row-item__value">200 x 92 x 86</div>
 										</div>
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Спальное место:</div>
-											<div class="card-item-row-item__value">2000 x 1200</div>
+											<div class="card-item-row-item__head">Спальное место (см):</div>
+											<div class="card-item-row-item__value">200 x 120</div>
 										</div>
 									</div>
 									<div class="card-item-row">
@@ -862,14 +862,14 @@
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Габариты:</div>
-											<div class="card-item-row-item__value">2000 x 920 x 860</div>
+											<div class="card-item-row-item__head">Габариты (см):</div>
+											<div class="card-item-row-item__value">200 x 92 x 86</div>
 										</div>
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Спальное место:</div>
-											<div class="card-item-row-item__value">2000 x 1200</div>
+											<div class="card-item-row-item__head">Спальное место (см):</div>
+											<div class="card-item-row-item__value">200 x 120</div>
 										</div>
 									</div>
 									<div class="card-item-row">
@@ -926,14 +926,14 @@
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Габариты:</div>
-											<div class="card-item-row-item__value">2000 x 920 x 860</div>
+											<div class="card-item-row-item__head">Габариты (см):</div>
+											<div class="card-item-row-item__value">200 x 92 x 86</div>
 										</div>
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Спальное место:</div>
-											<div class="card-item-row-item__value">2000 x 1200</div>
+											<div class="card-item-row-item__head">Спальное место (см):</div>
+											<div class="card-item-row-item__value">200 x 120</div>
 										</div>
 									</div>
 									<div class="card-item-row">
@@ -990,14 +990,14 @@
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Габариты:</div>
-											<div class="card-item-row-item__value">2000 x 920 x 860</div>
+											<div class="card-item-row-item__head">Габариты (см):</div>
+											<div class="card-item-row-item__value">200 x 92 x 86</div>
 										</div>
 									</div>
 									<div class="card-item-row card-item_hide">
 										<div class="card-item-row-item">
-											<div class="card-item-row-item__head">Спальное место:</div>
-											<div class="card-item-row-item__value">2000 x 1200</div>
+											<div class="card-item-row-item__head">Спальное место (см):</div>
+											<div class="card-item-row-item__value">200 x 120</div>
 										</div>
 									</div>
 									<div class="card-item-row">
