--- a/app/contacts.html
+++ b/app/contacts.html
@@ -178,7 +178,7 @@
 								<div class="header-wrapper-item-list-item">									
 									<a href="about.html" class="header-wrapper-item-list-item">О компании</a>
 									<div class="header-wrapper-item-list-item-inner-ul">
-										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">История</a>
+										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">История</a>
 										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">Принципы</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Новости</a>
 										<a href="contacts.html" class="header-wrapper-item-list-item-inner-ul-item">Контакты</a>
@@ -193,7 +193,7 @@
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">PDF-каталоги</a>
 										<a href="mechanics.html" class="header-wrapper-item-list-item-inner-ul-item">Механизмы</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Справочники терминов</a>
-										<a href="news-item.html" class="header-wrapper-item-list-item-inner-ul-item">Статьи</a>
+										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Статьи</a>
 										<a href="designers.html" class="header-wrapper-item-list-item-inner-ul-item">Дизайнеры рекомендует</a>
 									</div>
 								</div>
