--- a/app/collection-item.html
+++ b/app/collection-item.html
@@ -495,7 +495,7 @@
 		<div class="main">
 			<div class="container">
 				<div class="block collections collections_padding-ext">
-					<div class="block-head">Коллеции</div>
+					<div class="block-head">Коллекции</div>
 					<h2 class="block-h2">Загловок второго уровня</h2>
 					<div class="block-text block-text_full">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam natus, nisi eaque, sequi, laudantium beatae asperiores perferendis ipsam nobis veritatis iure sed nemo facere sit. Blanditiis iure labore consequatur sequi cumque, eveniet necessitatibus inventore et voluptates, mollitia nemo incidunt nam nesciunt nobis dicta eius autem quo laudantium minima. Ut atque labore vitae, quisquam dicta est sequi quibusdam aut a, quis quam! Eaque ea iusto officia dolor sunt illum, laboriosam amet. Magni dicta dolor cumque, neque eligendi consequuntur, maiores eos nam mollitia dolorum pariatur dignissimos illum aspernatur tempora, quibusdam eaque maxime provident aperiam tempore voluptatibus voluptatem? Non sit quas temporibus excepturi.</div>
 					<div class="collections-list">
