--- a/app/card.html
+++ b/app/card.html
@@ -1027,9 +1027,9 @@
 						</div>
 						<div class="tabs-container-list-item">
 							<div class="tabs-container-list-item-innercontainer">
-								<div class="tabs-container-list-item-innercontainer-side tabs-container-list-item-innercontainer-side_width100">
+								<div class="tabs-container-list-item-innercontainer-side tabs-container-list-item-innercontainer-side-table">
 									<div class="tabs-container-list-item-innercontainer-side-material">
-										<div class="tabs-container-list-item-innercontainer-side-material__head">Кожа</div>
+										<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Софа (замша)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
 											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
@@ -1063,8 +1063,41 @@
 													Красивый
 												</div>
 											</div>
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+													<img src="img/material-1.png" alt="Один вид">
+												</div>
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
+													Один вид
+												</div>
+											</div>
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+													<img src="img/material-2.png" alt="Один вид">
+												</div>
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
+													Другой
+												</div>
+											</div>
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+													<img src="img/material-3.png" alt="Один вид">
+												</div>
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
+													Мягкий
+												</div>
+											</div>
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+													<img src="img/material-4.png" alt="Один вид">
+												</div>
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
+													Красивый
+												</div>
+											</div>
 										</div>
-										<div class="tabs-container-list-item-innercontainer-side-material__head">Ткань</div>
+										<div class="tabs-container-list-item-innercontainer-side-material__head">
+										<div class="material-text-name">Ламбре (велюр)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
 											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
@@ -1090,8 +1123,32 @@
 													Мягкий
 												</div>
 											</div>
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+													<img src="img/material-1.png" alt="Один вид">
+												</div>
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
+													Один вид
+												</div>
+											</div>
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+													<img src="img/material-3.png" alt="Один вид">
+												</div>
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
+													Другой
+												</div>
+											</div>
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+													<img src="img/material-2.png" alt="Один вид">
+												</div>
+												<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
+													Мягкий
+												</div>
+											</div>
 										</div>
-										<div class="tabs-container-list-item-innercontainer-side-material__head">Эко кожа</div>
+										<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Soft Leather (кожа)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
 											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
