--- a/app/card.html
+++ b/app/card.html
@@ -553,7 +553,7 @@
 								</div>
 							</div>
 							<div class="card-main-block-description-row">
-								<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Габариты:</div>
+								<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Габариты (см):</div>
 								<div class="card-main-block-description-row-item">
 									<div class="card-main-block-description-row-item__value">200</div>
 									<div class="card-main-block-description-row-item__description">длина</div>
@@ -574,7 +574,7 @@
 								</div>
 							</div>
 							<div class="card-main-block-description-row card-main-block-description-row_border-bottom">
-								<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Спальное место:</div>
+								<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Спальное место (см):</div>
 							<div class="card-main-block-description-row-item">
 									<div class="card-main-block-description-row-item__value">200</div>
 									<div class="card-main-block-description-row-item__description">длина</div>
