--- a/app/discount.html
+++ b/app/discount.html
@@ -605,11 +605,11 @@
 							<div class="discont-row-item-row">
 								<div class="discont-row-item-row-list">
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Габариты:</div>
+										<div class="discont-row-item-row-list-item-name">Габариты (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x92x86</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Спальное место:</div>
+										<div class="discont-row-item-row-list-item-name">Спальное место (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x120</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
@@ -752,11 +752,11 @@
 							<div class="discont-row-item-row">
 								<div class="discont-row-item-row-list">
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Габариты:</div>
+										<div class="discont-row-item-row-list-item-name">Габариты (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x92x86</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Спальное место:</div>
+										<div class="discont-row-item-row-list-item-name">Спальное место (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x120</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
@@ -895,11 +895,11 @@
 							<div class="discont-row-item-row">
 								<div class="discont-row-item-row-list">
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Габариты:</div>
+										<div class="discont-row-item-row-list-item-name">Габариты (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x92x86</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Спальное место:</div>
+										<div class="discont-row-item-row-list-item-name">Спальное место (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x120</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
@@ -1038,11 +1038,11 @@
 							<div class="discont-row-item-row">
 								<div class="discont-row-item-row-list">
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Габариты:</div>
+										<div class="discont-row-item-row-list-item-name">Габариты (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x92x86</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
-										<div class="discont-row-item-row-list-item-name">Спальное место:</div>
+										<div class="discont-row-item-row-list-item-name">Спальное место (см):</div>
 										<div class="discont-row-item-row-list-item-value">200x120</div>
 									</div>
 									<div class="discont-row-item-row-list-item">
@@ -1517,7 +1517,7 @@
 						</div>
 					</div>
 					<div class="card-main-block-description-row jc-sb">
-						<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Спальное место:</div>
+						<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Спальное место (см):</div>
 						<div class="card-main-block-description-row-item">
 							<div class="card-main-block-description-row-item__value">200</div>
 							<div class="card-main-block-description-row-item__description">длина</div>
